<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundPanel">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/panelColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnSeven"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btn8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnEight"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btn9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnNine"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btnDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/operationPanel"
                android:padding="8sp"
                android:text="@string/btnDivide"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/operationPanel"
                android:onClick="operationPressed"/>

        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnFour"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btn5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnFive"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btn6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnSix"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btnMultiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/operationPanel"
                android:padding="8sp"
                android:text="@string/btnMultiply"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/operationPanel"
                android:onClick="operationPressed"/>

        </LinearLayout>

        <!-- Row 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="1"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnOne"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btn2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="1"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnTwo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btn3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="1"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnThree"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btnSubtract"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="1"
                android:background="@color/operationPanel"
                android:padding="8sp"
                android:text="@string/btnSubtract"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/operationPanel"
                android:onClick="operationPressed"/>
        </LinearLayout>

        <!-- Row 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="2"
                android:background="@color/numberPanel"
                android:padding="8sp"
                android:text="@string/btnZero"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/numberPanel"
                android:onClick="numPressed"/>

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="1"
                android:background="@color/operationPanel"
                android:padding="8sp"
                android:text="@string/btnClear"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/operationPanel"
                android:onClick="clearPressed"/>

            <Button
                android:id="@+id/btnAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="1"
                android:background="@color/operationPanel"
                android:padding="8sp"
                android:text="@string/btnAdd"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/operationPanel"
                android:onClick="operationPressed"/>
        </LinearLayout>

        <!-- Row 5 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:layout_marginBottom="8sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_weight="1"
                android:background="@color/operationPanel"
                android:padding="8sp"
                android:text="@string/btnEqual"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/operationPanel"
                android:onClick="equalsPressed" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        android:background="@color/green"
        android:textSize="24sp"
        android:maxLength="16"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>